Fix some issues in the dark mode by using correct primer variables

--- a/frontend/src/global_styles/content/_grid.sass
+++ b/frontend/src/global_styles/content/_grid.sass
@@ -200,7 +200,7 @@ body.widget-grid-layout
 
 .grid--widget-add
   padding: 15px
-  background-color: var(--gray)
+  background-color: var(--bgColor-neutral-emphasis)
   border-radius: 50%
   opacity: 0
 
