--- a/frontend/src/global_styles/content/_hide_section.sass
+++ b/frontend/src/global_styles/content/_hide_section.sass
@@ -31,7 +31,7 @@ section.hide-section
     flex-wrap: nowrap
     padding: 0.5rem 0
     &:hover
-      background-color: #f8f8f8
+      background-color: var(--control-transparent-bgColor-hover)
 
     .form--field-container
       flex-shrink: 1
