--- a/frontend/src/global_styles/openproject/_forms.sass
+++ b/frontend/src/global_styles/openproject/_forms.sass
@@ -51,11 +51,10 @@ $input-border-focus: 1px solid #999 !default
 
 // Labels
 $form-label-margin: 0.5rem !default
-$form-label-color: #333 !default
 
 // Inline labels
-$inlinelabel-color: #333 !default
-$inlinelabel-background: #eee !default
+$inlinelabel-color: var(--button--font-color) !default
+$inlinelabel-background: var(--button--background-color) !default
 $inlinelabel-border: $input-border !default
 
 // Select menus
